# FastAPI-Course-Management

./: .gitignore  main.py  pyproject.toml
api/: courses.py  sections.py  users.py
